--- a/demo/src/main/resources/com/example/demo/AdminDashboard.fxml
+++ b/demo/src/main/resources/com/example/demo/AdminDashboard.fxml
@@ -16,7 +16,7 @@
    <children>
       <AnchorPane fx:id="ApproveApplications" layoutX="180.0" prefHeight="400.0" prefWidth="340.0" style="-fx-background-color: #FFFFFF;" visible="false">
          <children>
-            <Label fx:id="approveCourseLabel" layoutX="88.0" layoutY="25.0" text="Approve Courses">
+            <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="40.0" prefWidth="340.0" style="-fx-background-color: #3876BF;" text="Approve Courses" textFill="WHITE">
                <font>
                   <Font name="Calibri" size="24.0" />
                </font>
@@ -32,11 +32,6 @@
       </AnchorPane>
       <AnchorPane fx:id="adminAddStudentPane" layoutX="180.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="340.0" style="-fx-background-color: #FFFFFF;" visible="false">
          <children>
-            <Label layoutX="98.0" layoutY="14.0" text="Add Student">
-               <font>
-                  <Font name="Calibri" size="24.0" />
-               </font>
-            </Label>
             <Label layoutX="55.0" layoutY="95.0" text="Name">
                <font>
                   <Font size="14.0" />
@@ -84,15 +79,15 @@
                   <Font size="14.0" />
                </font>
             </Label>
-         </children>
-      </AnchorPane>
-      <AnchorPane fx:id="adminAddTeacherPane" layoutX="180.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="340.0" style="-fx-background-color: #FFFFFF;" visible="false" AnchorPane.leftAnchor="180.0">
-         <children>
-            <Label layoutX="98.0" layoutY="14.0" text="Add Teacher">
+            <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="40.0" prefWidth="340.0" style="-fx-background-color: #3876BF;" text="Add Student" textFill="WHITE">
                <font>
                   <Font name="Calibri" size="24.0" />
                </font>
             </Label>
+         </children>
+      </AnchorPane>
+      <AnchorPane fx:id="adminAddTeacherPane" layoutX="180.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="340.0" style="-fx-background-color: #FFFFFF;" visible="false" AnchorPane.leftAnchor="180.0">
+         <children>
             <Label layoutX="55.0" layoutY="95.0" text="Name">
                <font>
                   <Font size="14.0" />
@@ -135,6 +130,11 @@
                </cursor>
             </Button>
             <Label fx:id="addTPLabel" layoutX="130.0" layoutY="52.0" textFill="RED" />
+            <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="40.0" prefWidth="340.0" style="-fx-background-color: #3876BF;" text="Add Teacher" textFill="WHITE">
+               <font>
+                  <Font name="Calibri" size="24.0" />
+               </font>
+            </Label>
          </children>
       </AnchorPane>
       <AnchorPane fx:id="assignCoursesPane" layoutX="180.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="340.0" style="-fx-background-color: #FFFFFF;" visible="false" AnchorPane.leftAnchor="180.0">
@@ -154,11 +154,6 @@
                <Cursor fx:constant="HAND" />
             </cursor>
          </Button>
-         <Label layoutX="79.0" layoutY="14.0" text="Assign Courses">
-            <font>
-               <Font name="Calibri" size="24.0" />
-            </font>
-         </Label>
          <Label layoutX="55.0" layoutY="95.0" text="Course">
             <font>
                <Font size="14.0" />
@@ -171,6 +166,11 @@
             </font>
          </Label>
          <ComboBox fx:id="sectionMenu" layoutX="120.0" layoutY="130.0" prefWidth="150.0" promptText="Choose Section" />
+         <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="40.0" prefWidth="340.0" style="-fx-background-color: #3876BF;" text="Assign Courses" textFill="WHITE">
+            <font>
+               <Font name="Calibri" size="24.0" />
+            </font>
+         </Label>
       </AnchorPane>
       <AnchorPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="180.0" style="-fx-background-color: #263F73;">
          <children>
@@ -240,11 +240,6 @@
       </AnchorPane>
       <AnchorPane fx:id="adminAddCoursePane" layoutX="180.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="340.0" style="-fx-background-color: #FFFFFF;" visible="false">
          <children>
-            <Label layoutX="98.0" layoutY="14.0" text="Offer Course">
-               <font>
-                  <Font name="Calibri" size="24.0" />
-               </font>
-            </Label>
             <Label layoutX="55.0" layoutY="170.0" text="Description">
                <font>
                   <Font size="14.0" />
@@ -280,13 +275,38 @@
                </font>
             </Label>
             <TextField fx:id="offerCourseId" layoutX="130.0" layoutY="85.0" promptText="Course Id" />
+            <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="40.0" prefWidth="340.0" style="-fx-background-color: #3876BF;" text="Offer Course" textFill="WHITE">
+               <font>
+                  <Font name="Calibri" size="24.0" />
+               </font>
+            </Label>
          </children>
       </AnchorPane>
       <AnchorPane fx:id="adminDashPane" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="340.0" style="-fx-background-color: #FFFFFF;" AnchorPane.leftAnchor="180.0">
          <children>
-            <Label fx:id="adminName" layoutX="72.0" layoutY="25.0" text="Dashboard">
+            <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="40.0" prefWidth="340.0" style="-fx-background-color: #3876BF;" text="Admin Dashboard" textFill="WHITE">
                <font>
                   <Font name="Calibri" size="24.0" />
+               </font>
+            </Label>
+            <Label layoutX="30.0" layoutY="110.0" text="Name :">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <Label fx:id="adminName" layoutX="90.0" layoutY="110.0">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <Label fx:id="adminEmail" layoutX="90.0" layoutY="150.0">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <Label layoutX="30.0" layoutY="150.0" text="Email :">
+               <font>
+                  <Font size="14.0" />
                </font>
             </Label>
          </children>
