--- a/demo/src/main/resources/com/example/demo/StudentDashboard.fxml
+++ b/demo/src/main/resources/com/example/demo/StudentDashboard.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TableColumn?>
@@ -13,7 +14,7 @@
 
 <AnchorPane prefHeight="400.0" prefWidth="520.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.StudentDashboardController">
    <children>
-      <AnchorPane fx:id="studentDashPane" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="340.0" style="-fx-background-color: #FFFFFF;" AnchorPane.leftAnchor="180.0">
+      <AnchorPane fx:id="studentDashPane" layoutX="180.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="340.0" style="-fx-background-color: #FFFFFF;" AnchorPane.leftAnchor="180.0">
          <children>
             <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="40.0" prefWidth="340.0" style="-fx-background-color: #3876BF;" text="Student Dashboard" textFill="WHITE">
                <font>
@@ -62,7 +63,7 @@
                   <Font name="Calibri" size="24.0" />
                </font>
             </Label>
-            <Button fx:id="studentDashLogout" layoutX="18.0" layoutY="242.0" mnemonicParsing="false" onAction="#Logout" prefHeight="25.0" prefWidth="144.0" style="-fx-background-color: #FFFFFF;" text="Log Out" textFill="#263f73">
+            <Button fx:id="studentDashLogout" layoutX="18.0" layoutY="287.0" mnemonicParsing="false" onAction="#Logout" prefHeight="25.0" prefWidth="144.0" style="-fx-background-color: #FFFFFF;" text="Log Out" textFill="#263f73">
                <font>
                   <Font name="Calibri" size="15.0" />
                </font>
@@ -70,7 +71,7 @@
                   <Cursor fx:constant="HAND" />
                </cursor>
             </Button>
-            <Button fx:id="studentDashBtn" layoutX="18.0" layoutY="90.0" mnemonicParsing="false" onAction="#dashboardPane" prefHeight="25.0" prefWidth="144.0" style="-fx-background-color: #FFFFFF;" text="Dashboard" textFill="#263f73">
+            <Button fx:id="studentDashBtn" layoutX="18.0" layoutY="94.0" mnemonicParsing="false" onAction="#dashboardPane" prefHeight="25.0" prefWidth="144.0" style="-fx-background-color: #FFFFFF;" text="Dashboard" textFill="#263f73">
                <font>
                   <Font name="Calibri" size="15.0" />
                </font>
@@ -78,7 +79,7 @@
                   <Cursor fx:constant="HAND" />
                </cursor>
             </Button>
-            <Button fx:id="enrollStudentsBtn" layoutX="18.0" layoutY="139.0" mnemonicParsing="false" onAction="#EnrollCourse" prefHeight="25.0" prefWidth="144.0" style="-fx-background-color: #FFFFFF;" text="Enroll Courses" textFill="#263f73">
+            <Button fx:id="enrollStudentsBtn" layoutX="18.0" layoutY="145.0" mnemonicParsing="false" onAction="#EnrollCourse" prefHeight="25.0" prefWidth="144.0" style="-fx-background-color: #FFFFFF;" text="Enroll Courses" textFill="#263f73">
                <font>
                   <Font name="Calibri" size="15.0" />
                </font>
@@ -86,13 +87,18 @@
                   <Cursor fx:constant="HAND" />
                </cursor>
             </Button>
-            <Button fx:id="submitFeedback" layoutX="18.0" layoutY="186.0" mnemonicParsing="false" onAction="#feedbackPane" prefHeight="25.0" prefWidth="144.0" style="-fx-background-color: #FFFFFF;" text="Submit Feedback" textFill="#263f73">
+            <Button fx:id="submitFeedback" layoutX="18.0" layoutY="192.0" mnemonicParsing="false" onAction="#feedbackPane" prefHeight="25.0" prefWidth="144.0" style="-fx-background-color: #FFFFFF;" text="Submit Feedback" textFill="#263f73">
                <font>
                   <Font name="Calibri" size="15.0" />
                </font>
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor>
+            </Button>
+            <Button id="attendanceBtn" layoutX="18.0" layoutY="239.0" mnemonicParsing="false" onAction="#showAttendance" prefHeight="26.0" prefWidth="144.0" style="-fx-background-color: #FFFFFF;" text="View Attendance" textFill="#263f73">
+               <font>
+                  <Font name="Calibri" size="15.0" />
+               </font>
             </Button>
          </children>
       </AnchorPane>
@@ -127,7 +133,7 @@
             </TableView>
          </children>
       </AnchorPane>
-    <AnchorPane fx:id="FeedbackForm" minHeight="0.0" minWidth="0.0" prefHeight="400.0" prefWidth="520.0" style="-fx-background-color: #FFFFFF;" visible="false">
+      <AnchorPane fx:id="FeedbackForm" minHeight="0.0" minWidth="0.0" prefHeight="400.0" prefWidth="520.0" style="-fx-background-color: #FFFFFF;" visible="false">
          <children>
             <Label alignment="CENTER" prefHeight="40.0" prefWidth="520.0" style="-fx-background-color: #263F73;" text="Feedback Form" textFill="WHITE">
                <font>
@@ -176,5 +182,25 @@
             <Label fx:id="FeedbackAlertLabel" layoutX="260.0" layoutY="97.0" prefHeight="20.0" prefWidth="84.0" textFill="#ed0000" />
          </children>
       </AnchorPane>
+      <AnchorPane fx:id="showAttendance" layoutX="180.0" minHeight="0.0" minWidth="0.0" prefHeight="400.0" prefWidth="340.0" style="-fx-background-color: #FFFFFF;" visible="false">
+         <children>
+            <ComboBox fx:id="attSectionCourseMenu" layoutX="72.0" layoutY="85.0" prefHeight="26.0" prefWidth="189.0" promptText="Select Course and Section" />
+            <Button fx:id="viewBtn" layoutX="108.0" layoutY="120.0" mnemonicParsing="false" prefHeight="28.0" prefWidth="126.0" style="-fx-background-color: #263f73;" text="Button" textFill="WHITE" onAction="#ShowData">
+               <font>
+                  <Font name="Calibri" size="15.0" />
+               </font>
+            </Button>
+            <Label id="AttendanceLbl" fx:id="studentName21" layoutX="84.0" layoutY="24.0" text="View Attendance">
+               <font>
+                  <Font name="Calibri" size="24.0" />
+               </font>
+            </Label>
+            <TableView fx:id = "attendanceTable" layoutY="160.0" prefHeight="256.0" prefWidth="340.0">
+              <columns>
+                <TableColumn fx:id="attendanceDate" minWidth="-1.0" prefWidth="150.0" text="Date" />
+                  <TableColumn fx:id="attendanceStatus" prefWidth="150.0" text="Attendance" />
+              </columns>
+            </TableView>
+         </children></AnchorPane>
    </children>
 </AnchorPane>
