--- a/demo/src/main/resources/com/example/demo/TeacherDashboard.fxml
+++ b/demo/src/main/resources/com/example/demo/TeacherDashboard.fxml
@@ -10,15 +10,16 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
+<?import javafx.scene.Cursor?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
 <AnchorPane prefHeight="400.0" prefWidth="520.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.TeacherDashboardController">
    <children>
       <AnchorPane fx:id="teacherDashPane" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="340.0" style="-fx-background-color: #FFFFFF;" AnchorPane.leftAnchor="180.0">
          <children>
-            <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="40.0" prefWidth="340.0" style="-fx-background-color: #3876BF;" text="Teacher Dashboard" textFill="WHITE">
-               <font>
-                  <Font name="Calibri" size="24.0" />
-               </font>
-            </Label>
+
             <Label layoutX="30.0" layoutY="110.0" text="Name :">
                <font>
                   <Font size="14.0" />
@@ -48,16 +49,10 @@
                   <Font name="Calibri" size="24.0" />
                </font>
             </Label>
-            <ComboBox fx:id="attendanceMenu" layoutX="77.0" layoutY="58.0" prefWidth="200.0" promptText="Choose Course and Section" />
-            <DatePicker fx:id="attendanceDate" layoutX="102.0" layoutY="92.0" prefWidth="150.0" promptText="Choose Date" />
-            <Button fx:id="PopualateStudents" layoutX="102.0" layoutY="128.0" onAction="#ShowStudents" prefHeight="30.0" prefWidth="150.0" style="-fx-background-color: #263F73;" text="Populate Students" textFill="WHITE">
-               <font>
-                  <Font size="14.0" />
-               </font>
-               <cursor>
-                  <Cursor fx:constant="HAND" />
-               </cursor></Button>
-            <TableView fx:id="attendanceTable" layoutY="165.0" prefHeight="235.0" prefWidth="340.0">
+            <ComboBox fx:id="attendanceMenu" layoutX="120.0" layoutY="60.0" prefWidth="200.0" promptText="Choose Course and Section" />
+            <DatePicker fx:id="attendanceDate" layoutX="120.0" layoutY="95.0" prefWidth="150.0" promptText="Choose Date" />
+            <Button fx:id="PopualateStudents" layoutX="120" layoutY="130" onAction="#ShowStudents" text="Populate Students" />
+            <TableView fx:id="attendanceTable" layoutY="165.0" prefHeight="323.0" prefWidth="340.0">
                <columns>
 
                   <TableColumn fx:id="RollNo" prefWidth="115.99996948242188" text="Roll No" />
@@ -74,7 +69,8 @@
                   <Font name="Calibri" size="24.0" />
                </font>
             </Label>
-            <Button fx:id="teacherDashCancel" layoutX="18.0" layoutY="242.0" mnemonicParsing="false" onAction="#Logout" prefHeight="25.0" prefWidth="144.0" style="-fx-background-color: #FFFFFF;" text="Log Out" textFill="#263f73">
+
+            <Button fx:id="teacherDashLogout" layoutX="18.0" layoutY="242.0" mnemonicParsing="false" onAction="#Logout" prefHeight="25.0" prefWidth="144.0" style="-fx-background-color: #FFFFFF;" text="Log Out" textFill="#263f73">
                <font>
                   <Font name="Calibri" size="15.0" />
                </font>
@@ -90,7 +86,7 @@
                   <Cursor fx:constant="HAND" />
                </cursor>
             </Button>
-            <Button fx:id="attendanceBtn" layoutX="18.0" layoutY="140.0" mnemonicParsing="false" onAction="#attendancePane" prefHeight="25.0" prefWidth="144.0" style="-fx-background-color: #FFFFFF;" text="Attendance" textFill="#263f73">
+            <Button fx:id="attendanceBtn" layoutX="18.0" layoutY="123.0" mnemonicParsing="false" onAction="#attendancePane" prefHeight="25.0" prefWidth="144.0" style="-fx-background-color: #FFFFFF;" text="Attendance" textFill="#263f73">
                <font>
                   <Font name="Calibri" size="15.0" />
                </font>
