--- a/demo/src/main/resources/com/example/demo/StudentDashboard.fxml
+++ b/demo/src/main/resources/com/example/demo/StudentDashboard.fxml
@@ -99,6 +99,9 @@
                <font>
                   <Font name="Calibri" size="15.0" />
                </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
             </Button>
          </children>
       </AnchorPane>
@@ -184,18 +187,21 @@
       </AnchorPane>
       <AnchorPane fx:id="showAttendance" layoutX="180.0" minHeight="0.0" minWidth="0.0" prefHeight="400.0" prefWidth="340.0" style="-fx-background-color: #FFFFFF;" visible="false">
          <children>
-            <ComboBox fx:id="attSectionCourseMenu" layoutX="72.0" layoutY="85.0" prefHeight="26.0" prefWidth="189.0" promptText="Select Course and Section" />
-            <Button fx:id="viewBtn" layoutX="108.0" layoutY="120.0" mnemonicParsing="false" prefHeight="28.0" prefWidth="126.0" style="-fx-background-color: #263f73;" text="Button" textFill="WHITE" onAction="#ShowData">
-               <font>
-                  <Font name="Calibri" size="15.0" />
-               </font>
-            </Button>
-            <Label id="AttendanceLbl" fx:id="studentName21" layoutX="84.0" layoutY="24.0" text="View Attendance">
+            <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="40.0" prefWidth="340.0" style="-fx-background-color: #3876BF;" text="View Attendance" textFill="WHITE">
                <font>
                   <Font name="Calibri" size="24.0" />
                </font>
             </Label>
-            <TableView fx:id = "attendanceTable" layoutY="160.0" prefHeight="256.0" prefWidth="340.0">
+            <ComboBox fx:id="attSectionCourseMenu" layoutX="72.0" layoutY="85.0" prefHeight="26.0" prefWidth="189.0" promptText="Select Course and Section" />
+            <Button fx:id="viewBtn" layoutX="108.0" layoutY="120.0" mnemonicParsing="false" onAction="#ShowData" prefHeight="28.0" prefWidth="126.0" style="-fx-background-color: #263f73;" text="View" textFill="WHITE">
+               <font>
+                  <Font name="Calibri" size="15.0" />
+               </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Button>
+            <TableView fx:id="attendanceTable" layoutY="160.0" prefHeight="242.0" prefWidth="340.0">
               <columns>
                 <TableColumn fx:id="attendanceDate" minWidth="-1.0" prefWidth="150.0" text="Date" />
                   <TableColumn fx:id="attendanceStatus" prefWidth="150.0" text="Attendance" />
